--- a/scss/main.scss
+++ b/scss/main.scss
@@ -24,6 +24,12 @@ body {
 
     .message {
         padding: 1em 0;
+
+        p {
+            margin: 0;
+            padding: 0 .5em;
+            border-left: 2px solid gray;
+        }
     }
 }
 
