--- a/scss/components/_variables.scss
+++ b/scss/components/_variables.scss
@@ -12,7 +12,7 @@ $input-border-color-focus: black;
 $input-border-transition-speed: 300ms;
 $input-border-radius: 2px;
 $input-padding: .25em;
-$submit-color-hover: cyan;
+$submit-color-hover: lightblue;
 $submit-color-transition-speed: 300ms;
 
 $breakpoint-phone: 599px;
