--- a/scss/main.scss
+++ b/scss/main.scss
@@ -59,6 +59,7 @@
     border-radius: $input-border-radius;
     font-family: $font-button-family;
     font-size: $font-button-size;
+    background-color: $submit-color;
 
     transition: background-color $submit-color-transition-speed;
 
@@ -76,9 +77,19 @@
         p {
             margin: 0;
             padding: 0 .5em;
-            border-left: 2px solid gray;
             font-family: $font-wall-family;
             font-size: $font-wall-size;
+            word-break: break-word;
+
+            transition: border-left $message-border-transition-speed;
         }
     }
+}
+
+.new-message {
+    border-left: 2px solid $new-message-color;
+}
+
+.old-message {
+    border-left: 2px solid $old-message-color;
 }
